--- a/designee/site_principal.html
+++ b/designee/site_principal.html
@@ -6,8 +6,6 @@
     <style>
         img {
             display: block;
-            height: 9rem;
-            width: 21rem;
             margin: 3rem auto;
         }
     </style>
@@ -15,21 +13,23 @@
 
 <body>
     <h1 style="color:blue">
-        <center><i>O Design</i></center>
+        <center><i>&mdash; O Design &mdash;</i></center>
 
     </h1>
-    <img src="download.png" alt="design" />
+    <img src="download.png" alt="design" height="150rem" width="350rem" />
     <p>
-        <center>O design é uma disciplina multifacetada que se concentra na criação e concepção de objetos, espaços,
+        <center>
+            <div style="background: rgb(194, 209, 226);">O design é uma disciplina multifacetada que se concentra na criação e concepção de objetos, espaços,
             sistemas e experiências de forma estética, funcional e eficaz. Envolve a combinação criativa de
             elementos visuais, estruturais e funcionais para atender às necessidades e expectativas dos usuários,
             melhorando a usabilidade, a estética e a eficiência de produtos, projetos arquitetônicos, interfaces
             digitais e muito mais. O design busca equilibrar forma e função, considerando aspectos como ergonomia,
             sustentabilidade, estética, usabilidade e inovação, com o objetivo de criar soluções que atendam às
-            demandas de um público-alvo e proporcionem uma experiência significativa e harmoniosa.</center>
+            demandas de um público-alvo e proporcionem uma experiência significativa e harmoniosa.</div>
+        </center>
     </p>
 
-    <img src="design.jpg" alt="designee" margin="3rem auto" />
+    <img src="design.jpg" alt="designee" height="340rem" width="600rem"/>
 </body>
 
 </html>
