--- a/new/quarta ativ/exercicio3.html
+++ b/new/quarta ativ/exercicio3.html
@@ -1,13 +1,13 @@
 <html>
 
 <head>
-    <title>Exemplo 19</title>
+    <title>Exercicio 3</title>
     <link rel="stylesheet" href="estilo3.css" />
 </head>
 
 <body>
     <main>
-        <table border="1" cellspacing="0" cellpadding="12px">
+        <table border="1" cellspacing="0" cellpadding="14px">
             <thead>
                 <tr>
                     <td>Disciplina</td>
@@ -53,36 +53,36 @@
                     <td colspan="4">Média logica de programação: 32,7</td>
                 </tr>
                 <tr>
-                    <td rowspan="6">Lógica de Programação</td>
-                    <td>Kim Kibum</td>
-                    <td>29</td>
-                    <td>30</td>
-                    <td>34</td>
+                    <td class="azul" rowspan="6">Lógica de Programação</td>
+                    <td class="azul">Kim Kibum</td>
+                    <td class="azul">29</td>
+                    <td class="azul">30</td>
+                    <td class="azul">34</td>
                 </tr>
                 <tr>
-                    <td>Lee Taemin</td>
-                    <td colspan="2">35</td>
-                    <td>37</td>
+                    <td class="azul">Lee Taemin</td>
+                    <td class="azul" colspan="2">35</td>
+                    <td class="azul">37</td>
                 </tr>
                 <tr>
-                    <td>Choi Minho</td>
-                    <td>38</td>
-                    <td>39</td>
-                    <td>40</td>
+                    <td class="azul">Choi Minho</td>
+                    <td class="azul">38</td>
+                    <td class="azul">39</td>
+                    <td class="azul">40</td>
                 </tr>
                 <tr>
-                    <td>Lee Jinki</td>
-                    <td colspan="2">41</td>
-                    <td>43</td>
+                    <td class="azul">Lee Jinki</td>
+                    <td class="azul" colspan="2">41</td>
+                    <td class="azul">43</td>
                 </tr>
                 <tr>
-                    <td>Kim Jonghyun</td>
-                    <td>44</td>
-                    <td>45</td>
-                    <td>46</td>
+                    <td class="azul">Kim Jonghyun</td>
+                    <td class="azul">44</td>
+                    <td class="azul">45</td>
+                    <td class="azul">46</td>
                 </tr>
                 <tr>
-                    <td colspan="4">Média logica de programação: 32,7</td>
+                    <td class="azul" colspan="4">Média logica de programação: 32,7</td>
                 </tr>
             </tbody>
         </table>
