--- a/new/oi.html
+++ b/new/oi.html
@@ -1,25 +1,24 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-br">
 
 <head>
-    <title>Lorem Ipsum</title>
+    <!-- Meta tags obrigatórias: -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min
-.js"></script>
+    <!-- Bootstrap CSS: -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-
+    KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <title>Olá, mundo!</title>
 </head>
 
 <body>
-    <div class="bg-warning p-5 text-center">
-        <h2>Lorem Ipsum Dolor Sit Amet</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta sint
-            explicabo fuga exercitationem labore dolorem! Hic obcaecati esse eum, id
-            doloribus voluptas corrupti? Alias blanditiis ea, adipisci aperiam sequi
-            laudantium.</p>
-        <button class="btn btn-primary">Lorem</button>
-        <button class="btn btn-success">Ipsum</button>
-    </div>
+    <!-- Área para o conteúdo da página. -->
+    <h1>Olá, Mundo!</h1>
+    <!-- Bootstrap JS: -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
