--- a/new/quinta atividade/siteculinaria.html
+++ b/new/quinta atividade/siteculinaria.html
@@ -1,9 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-
+KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <title>Receitas Culinárias</title>
     <style>
         main {
@@ -48,13 +51,34 @@
             justify-content: space-between;
             /*order: 1px blue solid;*/
         }
+
+        .col {
+            background-color: bisque;
+            border: 1px solid rgb(177, 160, 140);
+        }
     </style>
 
 </head>
 
 <body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
     <main>
         <img class="banner" src="recipes-banner.png" alt="banner" />
+        <div class="container text-center">
+            <div class="row">
+                <div class="col">
+                    Brigadeiro
+                </div>
+                <div class="col">
+                    Macaron
+                </div>
+                <div class="col">
+                    Brownie
+                </div>
+            </div>
+        </div>
         <div class="central">
             <a href="brigadeiro.html"><img class="brigadeiro" src="brigadeiro.jfif" /></a>
             <a href="macaroon.html"><img class="macarrao" src="macaroon.jpg" /></a>
