--- a/new/quinta atividade/sitelogin.html
+++ b/new/quinta atividade/sitelogin.html
@@ -16,6 +16,14 @@ KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="a
             border-radius: 1rem;
             background-color: rgb(236, 236, 236);
         }
+
+        main {
+            margin: 3rem auto;
+        }
+
+        .dropdown-divider {
+            margin: 0.5rem auto;
+        }
     </style>
 </head>
 
@@ -23,25 +31,29 @@ KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="a
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
-    <div class="container-md">
-        <form>
-            <div class="mb-3">
-                <h5>Login</h5>
-                <label for="exampleInputEmail1" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-            </div>
-            <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">Password</label>
-                <input type="password" class="form-control" id="exampleInputPassword1">
-            </div>
-            <div class="mb-3 form-check">
-                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                <label class="form-check-label" for="exampleCheck1">Check me out</label>
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button> <a class="btn btn-primary" href="sitecadastro.html" role="button">Sign Up</a>
-        </form>
-    </div>
+    <main>
+        <div class="container-md">
+            <form>
+                <div class="mb-3">
+                    <h5>Login</h5>
+                    <label for="exampleInputEmail1" class="form-label">Email address</label>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                </div>
+                <div class="mb-3">
+                    <label for="exampleInputPassword1" class="form-label">Password</label>
+                    <input type="password" class="form-control" id="exampleInputPassword1">
+                </div>
+                <div class="mb-3 form-check">
+                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                    <label class="form-check-label" for="exampleCheck1">Keep me logged</label>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="sitecadastro.html">New around here? Sign up</a>
+        </div>
+    </main>
 </body>
 
 </html>
