--- a/new/quinta atividade/sitecadastro.html
+++ b/new/quinta atividade/sitecadastro.html
@@ -64,8 +64,7 @@ KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="a
                     </div>
                 </div>
                 <div class="col-12">
-                    <button type="submit" class="btn btn-primary">Sign in</button> <a class="btn btn-primary"
-                        href="sitelogin.html" role="button">Login</a>
+                    <a class="btn btn-primary" href="siteperfil.html" role="button">Sign In</a>
                 </div>
             </form>
         </div>
