--- a/new/quinta atividade/siteperfil.html
+++ b/new/quinta atividade/siteperfil.html
@@ -24,8 +24,15 @@
             background-color: rgb(236, 236, 236);
         }
 
-        .btn, .col-4 {
+        .btn,
+        .col-4 {
             justify-content: center;
+        }
+
+        .list-group {
+            margin: 1rem auto;
+            padding: 0 2rem 0 0;
+            width: 730px;
         }
     </style>
 </head>
@@ -49,19 +56,60 @@
                         <a class="p-1 rounded" href="#simple-list-item-4">Experiências Profissionais</a>
                         <a class="btn btn-primary" href="sitelogin.html" role="button">Log Out</a>
                     </div>
-                    
+
                 </div>
                 <div class="col-8">
                     <div data-bs-spy="scroll" data-bs-target="#simple-list-example" data-bs-offset="0"
                         data-bs-smooth-scroll="true" class="scrollspy-example" tabindex="0">
                         <h4 id="simple-list-item-1">Informações Pessoais</h4>
-                        <p>...</p>
+                        <div class="card mb-3" style="max-width: 675px;">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="kibum.png" class="img-fluid rounded-start" alt="me">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Kim Ki Bum</h5>
+                                        <p class="card-text">Kim Ki-bum, mais conhecido na carreira musical por seu nome
+                                            artístico Key, é um cantor, ator, apresentador e designer de moda
+                                            sul-coreano. Estreou como membro do grupo SHINee em maio de 2008,
+                                            tornando-se um dos grupos mais bem sucedidos da Coreia do Sul.
+                                        </p>
+                                        <p class="card-text"><small class="text-body-secondary">Last updated
+                                                11/09/2023</small></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                         <h4 id="simple-list-item-2">Profissão</h4>
-                        <p>...</p>
+                        <ul class="list-group">
+                            <li class="list-group-item">Cantor</li>
+                            <li class="list-group-item">Ator</li>
+                            <li class="list-group-item">Apresentador</li>
+                            <li class="list-group-item">Designer de moda</li>
+                            <li class="list-group-item">Rapper</li>
+                            <li class="list-group-item">Dancarino</li>
+                            <li class="list-group-item">Compositor</li>
+                            <li class="list-group-item">Modelo</li>
+                        </ul>
                         <h4 id="simple-list-item-3">Escolaridade</h4>
-                        <p>...</p>
+                        <ul class="list-group">
+                            <li class="list-group-item">Passou seis semanas em um intercâmbio nos Estados Unidos</li>
+                            <li class="list-group-item">Além de sua língua nativa, o coreano, também fala o inglês,
+                                japonês e o básico de mandarim.</li>
+                            <li class="list-group-item">Key se formou pela Universidade Myongji com uma licenciatura em
+                                Cinema e Musical.</li>
+                            <li class="list-group-item">Ele atualmente atende por sua pós-graduação na Universidade
+                                Woosuk, com especialização em "Cultura e Conteúdo de Educação e Desenvolvimento". Sua
+                                tese é intitulada "A Influência da Educação de Estilo em Aparência Satisfatória e
+                                Auto-estima dos Adolescentes Coreanos".</li>
+                        </ul>
                         <h4 id="simple-list-item-4">Experiências Profissionais</h4>
-                        <p>...</p>
+                        <ol class="list-group list-group-numbered">
+                            <li class="list-group-item">Idol (2008-present)</li>
+                            <li class="list-group-item">Actor (2012-2017)</li>
+                            <li class="list-group-item">Compositor (2009-present)</li>
+                        </ol>
                     </div>
                 </div>
             </div>
