--- a/new/setima atividade/questaocinco.html
+++ b/new/setima atividade/questaocinco.html
@@ -19,7 +19,7 @@
 
         #resposta {
             background-color: rgb(102, 2, 122);
-            padding: 1rem;
+            padding: 1.5rem;
             margin-top: 1rem;
             width: 30rem;
             border-radius: 1rem;
@@ -35,12 +35,13 @@
         <h1>Teorema de Pitágoras</h1>
         <div id="resposta"></div>
         <script type="text/javascript">
-            var cateto1 = parseInt(prompt("Informe o valor de um cateto"));
-            var cateto2 = parseInt(prompt("Informe o segundo valor de um cateto"));
-            var cateto1elevado = cateto1 * cateto1;
-            var cateto2elevado = cateto2 * cateto2;
+            var cateto1 = parseFloat(prompt("Informe o valor de um cateto"));
+            var cateto2 = parseFloat(prompt("Informe o segundo valor de um cateto"));
+
+            var cateto1elevado = Math.pow(cateto1, 2);
+            var cateto2elevado = Math.pow(cateto2, 2);
             var soma = cateto1elevado + cateto2elevado
-            var raiz = Math.sqrt(soma)
+            var hipotenusa = Math.sqrt(soma)
 
             resposta.innerHTML = "O valor da hipotenusa é: " + hipotenusa;
         </script>
