--- a/new/sexta atividade/movies.html
+++ b/new/sexta atividade/movies.html
@@ -51,8 +51,8 @@
         Cine FliX
     </header>
     <main class="container">
-        <div class="filme"><img src="barbie.jpeg" alt="Barbie"></div>
-        <div class="filme"><img src="oppe.jpg" alt="nsei"></div>
+        <div class="filme"><a href="barbie.html"><img src="barbie.jpeg" alt="Barbie"></a></div>
+        <div class="filme"><a href="oppe.html"><img src="oppe.jpg" alt="nsei"></a></div>
     </main>
     <footer class="fundo-principal">
         <section class="nome">Cine FliX</section>
