--- a/new/nona atividade/bootstrap-5.3.2-examples/album/index.html
+++ b/new/nona atividade/bootstrap-5.3.2-examples/album/index.html
@@ -199,11 +199,12 @@
             </p>
           </div>
           <div class="col-sm-4 offset-md-1 py-4">
-            <h4>Contact</h4>
+            <h4>Menu</h4>
             <ul class="list-unstyled">
-              <li><a href="#" class="text-white">Follow on Twitter</a></li>
-              <li><a href="#" class="text-white">Like on Facebook</a></li>
-              <li><a href="#" class="text-white">Email me</a></li>
+              <li><a href="#" class="text-white">Escrita</a></li>
+              <li><a href="#" class="text-white">Escritório</a></li>
+              <li><a href="#" class="text-white">Papelaria</a></li>
+              <li><a href="#" class="text-white">Organização</a></li>
             </ul>
           </div>
         </div>
