--- a/new/decima atividade/confeitaria.html
+++ b/new/decima atividade/confeitaria.html
@@ -17,21 +17,18 @@
 		integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
 		crossorigin="anonymous"></script>
 	<header>
-		<div class="logoImg">
-			<img src="logo.png" alt="Maria Chocolate" height="90" />
+		<div class="logo">
+			<img src="logo.png" alt="Maria Chocolate" height="100px" width="165px" />
 		</div>
 		<div class="titulo">
 			<h2>Confeitando para a alegria da sua vida...</h2>
 		</div>
 	</header>
 	<nav>
-		<ul class="list-group list-group-horizontal">
-			<a class="list-group-item" href="#">Home</a>
-			<a class="list-group-item" href="#">Bolos</a>
-			<a class="list-group-item" href="#">Tortas</a>
-			<a class="list-group-item" href="#">Festas</a>
-			<a class="list-group-item" href="#">Contatos</a>
-		</ul>
+		<div class="menu">
+			<p><a href="confeitaria.html"> Home </a> <a href="bolos.html"> Bolos </a> <a href="tortas.html"> Tortas </a>
+				<a href="festas.html"> Festas </a> <a href="contatos.html"> Contato </a></p>
+		</div>
 	</nav>
 	<main>
 		<div class="row row-cols-md-5">
