--- a/new/decima atividade/confeitaria.html
+++ b/new/decima atividade/confeitaria.html
@@ -26,8 +26,8 @@
 	</header>
 	<nav>
 		<div class="menu">
-			<p><a href="confeitaria.html"> Home </a> <a href="bolos.html"> Bolos </a> <a href="tortas.html"> Tortas </a>
-				<a href="festas.html"> Festas </a> <a href="contatos.html"> Contato </a></p>
+			<p><a class="link-light link-offset-2" href="confeitaria.html"> Home </a> <a class="link-light link-offset-2" href="bolos.html"> Bolos </a> <a class="link-light link-offset-2" href="tortas.html"> Tortas </a>
+				<a class="link-light link-offset-2" href="festas.html"> Festas </a> <a class="link-light link-offset-2" href="contatos.html"> Contato </a></p>
 		</div>
 	</nav>
 	<main>
