--- a/new/nona atividade/bootstrap-5.3.2-examples/album/index.html
+++ b/new/nona atividade/bootstrap-5.3.2-examples/album/index.html
@@ -127,6 +127,10 @@
       height: 4rem;
       width: 10rem;
     }
+    img{
+      width: 22.48rem;
+      height: 14.15rem;
+    }
   </style>
 
 
@@ -267,8 +271,7 @@
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
           <div class="col">
             <div class="card shadow-sm">
-              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg"
-                role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+              <img src="apontadorcoelho.jpg" alt="Apontador">
                 <title>Placeholder</title>
                 <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
                   dy=".3em">Apontador C/ Depósito 1 Furo Coelho TILIBRA</text>
